fix subheader for BSG, add standout for BSG, fixed km-list spacing and line-height

--- a/styles/css/main-bsg.css
+++ b/styles/css/main-bsg.css
@@ -70,6 +70,17 @@
   width: 28px;
   font-size: 0.75rem; }
 
+/** fix spacing for sub headers ***/
+h4 {
+  margin-bottom: 0; }
+
+.bsg-standout {
+  padding: 2px 6px;
+  border-radius: 5px;
+  color: #FF999F;
+  background: #EEF3F5;
+  border: 1px solid #E1E5E4; }
+
 /* ============================================================
    BSG HEADER
 /* ============================================================ */
