--- a/styles/scss/components/_lists.scss
+++ b/styles/scss/components/_lists.scss
@@ -14,11 +14,13 @@ ul {
       margin-bottom: 2rem;
   
       li {
-        line-height: 2.5rem;
+        line-height: 1.6rem;
         padding-left: 18px;
         list-style: none;
         padding: 0;
         margin: 0;
+        margin-bottom: 11px;
+
   
         &:before {
           content: "\f111";
